<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/time">
        <com.example.me.haft.utils.SeekbarPreference
            android:title="@string/exercise"
            app:addText="@string/sec"
            app:defaultValue="30"
            android:key="exercise_time">

        </com.example.me.haft.utils.SeekbarPreference>
        <com.example.me.haft.utils.SeekbarPreference
            android:title="@string/rest"
            app:addText="@string/sec"
            app:defaultValue="15"
            android:key="rest_time">

        </com.example.me.haft.utils.SeekbarPreference>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/reset">
        <Preference android:layout="@layout/default_button_layout">

        </Preference>
        <Preference android:layout="@layout/settings_intervals_note">

        </Preference>
    </PreferenceCategory>


</PreferenceScreen>